Performance optimization integration improvements (#79)